Fix non visible code highlighting

--- a/themes/new-year/static/css/style.css
+++ b/themes/new-year/static/css/style.css
@@ -149,7 +149,7 @@ pre {
 }
 
 code {
-    background-color: var(--silver);
+    background-color: var(--gold);
     padding: 2px 4px;
     border-radius: 3px;
     font-family: 'Courier New', Courier, monospace;
